--- a/src/index.css
+++ b/src/index.css
@@ -89,6 +89,9 @@ a {
   display: block;
   background-color: transparent;
 }
+.cerrar-sesion {
+  color: var(--blanco);
+}
 
 @media (min-width: 768px) {
   .contenedor-app {
@@ -136,6 +139,7 @@ aside {
 .app-header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   background-color: var(--gris2);
   padding: 4rem;
 }
@@ -239,7 +243,7 @@ aside {
 .mensaje {
   text-align: center;
   font-size: 1.6rem;
-  border-radius: 2px;
+  border-radius: 0;
 }
 .mensaje:hover {
   cursor: default;
@@ -323,6 +327,33 @@ aside {
   opacity: 0.7;
 }
 
-.enlace-cuenta:hover {
-  color: var(--negro);
+.alerta {
+  position: fixed;
+  top: 0;
+  left: 0;
+  padding: 1rem 2rem;
+  border-radius: 1rem;
+  font-family: var(--headingFont);
+  font-weight: 600;
+  text-transform: uppercase;
+  font-size: 2rem;
+  text-align: center;
+  width: 100%;
+}
+@media (min-width: 768px) {
+  .alerta {
+    width: auto;
+    top: 30px;
+    right: 10px;
+    left: auto;
+  }
+}
+
+.alerta-ok {
+  background-color: rgb(109, 211, 109);
+  color: rgb(2, 103, 2);
+}
+.alerta-error {
+  background-color: #c90000;
+  color: var(--blanco);
 }
